<resources>
    <string name="app_name">Вонь в округе!</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_chooseReek">Выберите из списка ниже запах, который Вы чувствуете:</string>
    <string name="tv_chooseRecipients">Выберите из списка адресатов, которым Вы хотите отправить жалобу:</string>
    <string name="btn_selectLocation">Укажите место на карте</string>
    <string name="eFab_sendComplaint">Отправить жалобу</string>
    <string name="eFab_mapScreen">Скрин места</string>
    <string name="tv_addMarker">Добавьте метку</string>
    <string name="menuItem_appInfo">О приложении</string>

    <string name="tv_appInfo">
        <![CDATA[
        <p>Приложение «Вонь в округе!» позволит Вам отправить жалобу на загрязнение воздуха и неприятные запахи в компетентные органы государственной власти по городу Москва и Московской области.
        <br>Выберите неприятный запах, адресата и укажите местоположение на карте, «Вонь в округе!» создаст для Вас электронное письмо.</p>

        <br><br>

        <p><small>
        Данные предоставлены: <a href="https://apidata.mos.ru/">apidata.mos.ru</a>
        <br>
        Иконки предоставлены: <a href="https://icons8.ru/">icons8.ru</a>
        </small></p>
]]>
        </string>
    <string name="email_subject">Жалоба на неприятный запах</string>
    <string name="email_client">Выберите почтовый клиент</string>

</resources>
