<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:context=".ui.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_chooseReek" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:popupBackground="@color/colorPopupBackground"
                android:popupElevation="8dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_chooseRecipients" />

            <LinearLayout
                android:id="@+id/checkbox_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selectLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_selectLocation"
                android:textAllCaps="false"
                app:icon="@drawable/ic_location"
                app:iconGravity="start" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/matCardView"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="72dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_mapScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/ibtn_deleteScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_delete_screen"
                    android:visibility="gone" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="72dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_sendComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:text="@string/eFab_sendComplaint"
        android:textAllCaps="false"
        app:icon="@drawable/ic_send" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



